test/e2e/fixtures/extauth-http-partial-buffer/queries.json
[
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "200"
    },
    "body": "bWVzc2FnZV9ib2R5"
  },
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "200"
    },
    "body": "Ym9keQ=="
  },
  {
    "url": "/target/",
    "method": "GET",
    "headers": {
      "kat-req-http-requested-status": "401"
    },
    "body": "Ym9keQ=="
  }
]
